# sqlitegis

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml  deny.toml  fuzz.sh  prek.toml
.github/workflows/: ci.yml  packaging.yml  pages.yml  perf.yml  python-wheels.yml  python.yml  release.yml
benches/: spatialite_vs_sqlitegis.rs
bindings/python/: .gitignore  README.md  pyproject.toml
bindings/python/scripts/: before_build.sh
bindings/python/sqlitegis/: __init__.py
bindings/python/sqlitegis/_bin/: .gitkeep
bindings/python/tests/: conftest.py  test_error_paths.py  test_module_surface.py  test_scalar_functions.py  test_spatial_index.py  test_spatial_index_performance.py
docs/: perf-vs-spatialite.md
examples/web-demo/: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  rust-toolchain.toml
examples/web-demo/assets/: app.css
examples/web-demo/protocol/: Cargo.toml
examples/web-demo/protocol/src/: lib.rs
examples/web-demo/public/: app.css  cities5000.tsv
examples/web-demo/src/: components.rs  db.rs  geometry.rs  loader.rs  main.rs  runner.rs  state.rs  viz.rs  worker_handle.rs
examples/web-demo/worker/: Cargo.toml
examples/web-demo/worker/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: common.rs  fuzz_ewkb_decode.rs  fuzz_geodesic.rs  fuzz_geos_differential.rs  fuzz_mbr_differential.rs  fuzz_sym_difference_disjoint.rs  fuzz_text_parsers.rs  fuzz_union_disjoint.rs
geolite/: Cargo.toml
geolite-core/src/: ewkb.rs
geolite-core/src/functions/: accessors.rs  constructors.rs  io.rs  measurement.rs  operations.rs  predicates.rs
geolite-diesel/: Cargo.toml
geolite-diesel/src/: expression_methods.rs  functions_template.rs  query_patterns.rs  types.rs
geolite-diesel/tests/: diesel_test_helpers.rs  expression_methods.rs  postgres_integration.rs  sqlite_integration.rs  sqlite_types.rs  wasm_integration.rs
geolite-sqlite/src/: ffi.rs
geolite-sqlite/tests/support/: shared_cases.rs
geolite/benches/: spatial_index.rs
geolite/src/: lib.rs
geolite/src/core/: error.rs  ewkb.rs  function_catalog.rs  mod.rs
geolite/src/core/functions/: accessors.rs  constructors.rs  emptiness.rs  io.rs  measurement.rs  mod.rs  operations.rs  predicates.rs
geolite/src/diesel/: expression_methods.rs  functions.rs  functions_template.rs  mod.rs  prelude.rs  query_patterns.rs  types.rs
geolite/src/sqlite/: deterministic_callbacks.rs  direct_only_callbacks.rs  ffi.rs  mod.rs  sqlite_compat.rs
geolite/tests/: diesel_expression_methods.rs  diesel_postgres_integration.rs  diesel_predicate_bool_helpers.rs  diesel_sqlite_integration.rs  diesel_sqlite_types.rs  diesel_test_helpers.rs  diesel_wasm_integration.rs  sqlite_integration.rs  sqlite_test_db_macro.rs  sqlite_wasm.rs
geolite/tests/support/: shared_cases.rs
sqlitegis/: Cargo.toml
sqlitegis/src/core/: ewkb.rs
sqlitegis/src/core/functions/: accessors.rs  constructors.rs  io.rs  measurement.rs  operations.rs  predicates.rs
sqlitegis/src/diesel/: expression_methods.rs  functions.rs  mod.rs  prelude.rs  query_helpers.rs  query_patterns.rs  types.rs
sqlitegis/src/sqlite/: deterministic_callbacks.rs  ffi.rs
sqlitegis/tests/: diesel_expression_methods.rs  diesel_postgres_integration.rs  diesel_sqlite_integration.rs  diesel_sqlite_types.rs  diesel_test_helpers.rs  diesel_wasm_integration.rs  sqlite_integration.rs
sqlitegis/tests/support/: shared_cases.rs
src/: lib.rs
src/core/: error.rs  ewkb.rs
src/core/functions/: accessors.rs  io.rs  measurement.rs  mod.rs  operations.rs  predicates.rs
src/diesel/: expression_methods.rs  query_helpers.rs  types.rs
src/sqlite/: ffi.rs  loadable.rs  mod.rs  sqlite_compat.rs
src/sqlite/loadable/: args.rs  mod.rs  scalar.rs  spatial_index.rs
tests/: sqlite_integration.rs
xtask/: Cargo.toml
xtask/src/: main.rs
