[package]
name         = "geolite-diesel"
version      = "0.1.0"
edition      = "2021"
rust-version.workspace = true
license      = "MIT OR Apache-2.0"
description  = "Diesel ORM integration for geolite spatial types (Geometry, Geography)"
readme       = "../README.md"
repository   = "https://github.com/LucaCappelletti94/geolite"
homepage     = "https://github.com/LucaCappelletti94/geolite"
documentation = "https://docs.rs/geolite-diesel"
keywords     = ["geospatial", "diesel", "postgis", "ewkb", "sqlite"]
categories   = ["database", "api-bindings"]
autotests    = false

[package.metadata.docs.rs]
features = ["sqlite"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "geolite_diesel"

[dependencies]
geolite-core = { version = "0.1.0", path = "../geolite-core" }
geo           = { workspace = true }
# Diesel base (no backend enabled) -- backends are opt-in via features.
diesel = { version = "2", default-features = false }

[dev-dependencies]
chrono = "0.4"
geolite-core = { version = "0.1.0", path = "../geolite-core" }
geolite-sqlite = { version = "0.1.0", path = "../geolite-sqlite" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = ["plotters", "cargo_bench_support"] }
libsqlite3-sys = { workspace = true }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio = { version = "1", features = ["rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
sqlite-wasm-rs = "0.5"
wasm-bindgen-test = "0.3"

[[test]]
name = "sqlite_types"
path = "tests/sqlite_types.rs"
required-features = ["sqlite"]

[[test]]
name = "expression_methods"
path = "tests/expression_methods.rs"
required-features = ["sqlite"]

[[test]]
name = "postgres_integration"
path = "tests/postgres_integration.rs"
required-features = ["postgres"]

[[test]]
name = "sqlite_integration"
path = "tests/sqlite_integration.rs"
required-features = ["sqlite"]

[[test]]
name = "wasm_integration"
path = "tests/wasm_integration.rs"
required-features = ["sqlite"]

[[bench]]
name = "spatial_index"
path = "benches/spatial_index.rs"
harness = false
required-features = ["sqlite"]

[features]
default = []
sqlite  = ["diesel/sqlite"]
# Enable PostgreSQL backend support (future).
postgres = ["diesel/postgres"]
