[package]
name = "sqlitegis-web-demo"
version = "0.1.0"
edition = "2021"
publish = false
description = "Browser demo for SQLiteGIS: Diesel + sqlite-wasm-rs + a city-distance UI."

# Kept out of the main workspace on purpose -- Dioxus drags in hundreds of
# transitive crates that would slow down workspace precommit/audit.
[workspace]

[[bin]]
name = "sqlitegis-web-demo"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }

# Syntax-highlighted SQL editor. `dioxus-code` provides the highlighter, gated
# behind per-language features so we only ship SQL grammar.
dioxus-code = { version = "0.1", default-features = false, features = ["lang-sql"] }
dioxus-code-editor = "0.1"

# Font Awesome icons as inline SVG components. Solid set covers everything
# the demo needs (run, table, map, status indicators); brands adds GitHub.
dioxus-free-icons = { version = "0.10", features = ["font-awesome-solid", "font-awesome-brands"] }

# SQLiteGIS via path so the demo always tracks the live source.
sqlitegis = { path = "../../sqlitegis", features = ["diesel-sqlite"] }

# WASM-side SQLite + Diesel SQLite backend.
diesel = { version = "2", default-features = false, features = ["sqlite"] }
sqlite-wasm-rs = "0.5"

# Browser interop.
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Element",
    "DomRect",
    "Performance",
] }
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }

# Logging.
log = "0.4"
console_log = { version = "1", features = ["color"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
# Strip DWARF info. dx 0.7 defaults to embedding debug symbols in WASM
# (--debug-symbols=true), which makes binaryen abort during wasm-opt with
# "compile unit size was incorrect". Stripping in the linker keeps wasm-opt
# happy without losing release-grade optimisation.
strip = "debuginfo"
debug = false
