[package]
name = "sqlitegis-web-demo"
version = "0.1.0"
edition = "2021"
publish = false
description = "Browser demo for SQLiteGIS: Diesel + sqlite-wasm-rs (in a dedicated worker) + a city-distance UI."

# Kept out of the main workspace on purpose. Dioxus drags in hundreds of
# transitive crates that would slow down workspace precommit/audit. The
# `members` list pulls in the dedicated SQLite worker and the shared
# message-protocol crate so a single `cargo check` covers both bundles.
[workspace]
members = ["worker", "protocol"]

[[bin]]
name = "sqlitegis-web-demo"
path = "src/main.rs"

[build-dependencies]
# Used in build.rs to compile the worker crate to wasm32 and run
# wasm-bindgen on the output before it lands in `public/generated/`.
wasm-bindgen-cli-support = "0.2"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }

# Syntax-highlighted SQL editor. `dioxus-code` provides the highlighter, gated
# behind per-language features so we only ship SQL grammar.
dioxus-code = { version = "0.1", default-features = false, features = ["lang-sql"] }
dioxus-code-editor = "0.1"

# Font Awesome icons as inline SVG components. Solid set covers everything
# the demo needs (run, table, map, status indicators); brands adds GitHub.
dioxus-free-icons = { version = "0.10", features = ["font-awesome-solid", "font-awesome-brands"] }

# Shared worker message protocol. Pure-data serde crate, no sqlite deps.
sqlitegis-web-demo-protocol = { path = "protocol" }

# Parses the GeoJSON strings that geometry-returning queries project into a
# `geojson` column, so the map can draw lines and polygons. Lightweight, no
# geo/geozero pulled into the UI bundle.
serde_json = "1"

# Browser interop. SQLite now lives in `worker/` so this bundle no longer
# carries diesel / sqlite-wasm-rs / sqlitegis.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Element",
    "DomRect",
    "Performance",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "ErrorEvent",
] }
serde-wasm-bindgen = "0.6"
# Channels used by worker_handle to await worker responses on the main
# thread without re-entering Dioxus signals from the wrong context.
futures = { version = "0.3", default-features = false, features = ["std"] }
futures-channel = "0.3"

# Logging.
log = "0.4"
console_log = { version = "1", features = ["color"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
# Strip DWARF info. dx 0.7 defaults to embedding debug symbols in WASM
# (--debug-symbols=true), which makes binaryen abort during wasm-opt with
# "compile unit size was incorrect". Stripping in the linker keeps wasm-opt
# happy without losing release-grade optimisation.
strip = "debuginfo"
debug = false
